# cipher-secret

./: LICENSE  README.md  pyproject.toml  secret.py
.github/workflows/: release.yml
